<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/favicon2"
    tools:context=".Activities.RequestStatusActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:background="@color/black"
        android:gravity="center"
        android:alpha="0.8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_title"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_margin="15dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_opt1"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/approved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_opt2"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/declined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_opt3"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/request_opt4"
            android:textSize="25sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu_custom"
        app:itemBackground="@color/white"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black" />

</RelativeLayout>