<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:id="@+id/mainLinear">

        <!--Row 1 Home options-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/row1"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/opt_rental_history"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/card_border_black"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_opt_1"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:id="@+id/opt_report_history"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/card_border_black"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/report" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_opt_2"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <!--Row 2 Home options-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/row2"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:id="@+id/opt_request_status"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/card_border_black"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/request"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_opt_3"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/opt_report_problem"
                android:padding="10dp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/card_border_black"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/problem"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_opt_4"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <!--Row 3 Home options-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/row3"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:id="@+id/opt_maintenance"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/card_border_black"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/settings"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_opt_5"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:id="@+id/opt_payment"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/card_border_black"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/payment"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_opt_6"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <!--Row 4 Home options-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/row4"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:id="@+id/opt_bills"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/card_border_black"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tax"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/utility_bills"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>