<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MaintenanceRequestActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:id="@+id/LL_report"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/report_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/black"
            android:src="@drawable/favicon2" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_edt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maintenance_edt1"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_margin="2dp"
                android:id="@+id/SpinnerTxtView"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:entries="@array/category_array"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_edt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/input_edt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:hint="@string/maintenance_edt2" />
        </android.support.design.widget.TextInputLayout>



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maintenance_btn1"
                android:textColor="@color/black"
                android:id="@+id/btn_submit"
                android:layout_margin="10dp"
                android:background="@drawable/transparent_btn_black"/>





    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu_custom"
        app:itemBackground="@color/white"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black" />

</RelativeLayout>